--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^6.0.0"
+    "mongodb": "4.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
