--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -12,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "4.0"
+    "mongodb": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
